flatten packages
Pacakges should match projects in .net right?
Otherwise the public/private is kind of useless?
I think that leads to either too many files or chunky ones. I chose the second
