# api/internal/domain/accountEndpoint.go
@@ -1,10 +1,9 @@
-package account
+package domain
 
 import (
 	"context"
 
 	"github.com/pkg/errors"
-	"nathan.dev/consent/internal/domain"
 )
 
 type AccountEndpoint struct {
@@ -26,7 +25,7 @@ type UserCreateRequest struct {
 	Name string
 }
 
-func (e *AccountEndpoint) UserCreate(ctx domain.Context, req UserCreateRequest) (*UserModel, error) {
+func (e *AccountEndpoint) UserCreate(ctx Context, req UserCreateRequest) (*UserModel, error) {
 	return e.accountRepo.UserCreate(ctx, User{Name: req.Name})
 }
 
@@ -34,7 +33,7 @@ type UserGetRequest struct {
 	Id string
 }
 
-func (e *AccountEndpoint) UserGet(ctx domain.Context, req UserGetRequest) (*UserModel, error) {
+func (e *AccountEndpoint) UserGet(ctx Context, req UserGetRequest) (*UserModel, error) {
 	return e.accountRepo.UserGet(ctx, req.Id)
 }
 
@@ -43,7 +42,7 @@ type OrganizationCreateRequest struct {
 	OwnerUserId string
 }
 
-func (e *AccountEndpoint) OrganizationCreate(ctx domain.Context, req OrganizationCreateRequest) (*OrganizationModel, error) {
+func (e *AccountEndpoint) OrganizationCreate(ctx Context, req OrganizationCreateRequest) (*OrganizationModel, error) {
 	member, err := e.accountRepo.UserGet(ctx, req.OwnerUserId)
 	if err != nil {
 		return nil, errors.Wrap(err, "Owning user")
@@ -61,6 +60,6 @@ type OrganizationGetRequest struct {
 	Id string
 }
 
-func (e *AccountEndpoint) OrganizationGet(ctx domain.Context, req OrganizationGetRequest) (*OrganizationModel, error) {
+func (e *AccountEndpoint) OrganizationGet(ctx Context, req OrganizationGetRequest) (*OrganizationModel, error) {
 	return e.accountRepo.OrganizationGet(ctx, req.Id)
 }
